fixed address alignment

--- a/style.css
+++ b/style.css
@@ -119,9 +119,13 @@ a img:hover {
   border-radius: 25px;
 }
 
-  footer{
-    margin-top: 5px;
-  }
+footer{
+  margin-top: 5px;
+}
+
+address{
+  text-align: center;
+}
 
   @media screen and (max-width: 768px) {
     .image-container *{
